FB-001: Exception handling.